index.html updated

--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
 <html>
-  <head>
-  <meta charset= "utf-8">
-  <title> Titulo de la pagina</title>
-  <link rel="stylesheet" href="estilo.css">
 <head>
-<body>
-  <section>
-    <h1> Páxina de Xoán C. Pardo</h1>
-	<P> Contido irrelevante para lectores desmotivados </p>
-  </section>
-  <footer>
-  Ollo á letra pequena dos contratos
-  </footer>
- </body>
+    <meta charset= "utf-8">
+    <title>ICAP: Test Page</title>
+    <script type="text/javascript">
+        function getURL() {
+            document.write("URL: " + window.location.href);
+        }
+    </script>
+</head>
+    <body>
+	<div style="width:700px;height:150px;border:1px solid #000;text-align: center;">
+	<strong><br>
+	<u>GCED ICAP: 2021/2022</u>
+		<p><script>getURL();</script>
+		<br><br>Páxina web de [nome e apelidos da(o) alumna(o)] </p>
+	</strong>
+	</div>
+    </body>
 </html>
