--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,9 @@
     <body>
 	<div style="width:700px;height:150px;border:1px solid #000;text-align: center;">
 	<strong><br>
-	<u>GCED ICAP: 2021/2022</u>
+	<u>GCED ICAP: 2022/2023</u>
 		<p><script>getURL();</script>
-		<br><br>Páxina web de [nome e apelidos da(o) alumna(o)] </p>
+		<br><br>Páxina web de Jorge Montero Álvarez </p>
 	</strong>
 	</div>
     </body>
